# djdesk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  justfile  main.py  manage.py  pyproject.toml  readthedocs.yml
.github/workflows/: electron-desktop.yml
docs/: architecture.rst  changelog.rst  concepts.rst  conf.py  contributing-docs.rst  electron.rst  index.rst  requirements.txt
docs/_static/: custom.css  mermaid-init.js
docs/api/: overview.rst  rest_endpoints.rst  websocket_channels.rst
docs/guide/: integrating_django_with_electron.rst
docs/tutorial/: 00_getting_started.rst  01_workspace_setup.rst  02_dashboard.rst  03_native_enhancements.rst  04_task_runner.rst  05_data_lab.rst
electron/: .main.js.swp  README.md  build-django.js  electron-builder.json  main.js  package-lock.json  package.json  preload.cjs
scripts/: bundle_docs.py  fetch_samples.py
specs/: 2025-11-15_django_electron.md  2025-11-16_app_contents.md  2025-11-16_documentation.md
src/djdesk/: asgi.py  urls.py  wsgi.py
src/djdesk/inspector/: admin.py  apps.py  assets.py  command_runner.py  content.py  data_lab.py  forms.py  models.py  samples.py  services.py  tasks.py  urls.py  views.py
src/djdesk/inspector/migrations/: 0001_initial.py  0002_seed_content.py  0003_doclink_pane_target.py  0004_workspace_path_guards.py  0005_alter_doclink_pane_target.py
src/djdesk/inspector/templatetags/: inspector_icons.py
src/djdesk/settings/: __init__.py  base.py  local.py  production.py  test.py
tests/: __init__.py  test_inspector.py  test_settings.py
(+6 files in other folders)
